# cmdrvl-xew

./: .env.local.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.beads/: issues.jsonl
.ntm/pids/: bd-cmdrvl-xew.pid  cm-cmdrvl-xew.pid
docs/: EXIT_CODES.md  P009_BLOOMBERG_RUNBOOK.md  PLAN_EDGAR_NEXT_XBRL_EARLY_WARNING.MD  PLAN_FEE_EXHIBIT_FRAGILITY_P006.md  REPRO_RUNBOOK.md  TAXONOMY_AND_RULE_BASIS_POLICY.md  XEW_EVIDENCE_PACK_CONTRACT_V1.MD
docs/examples/: xew_findings.example.v1.json
scripts/: fetch_samples.sh
test_pack_integration/: test_with_metadata.html
tests/: test_arelle_setup.py  test_cached_s3_msft_e2e.py  test_canon_snapshot_adapter.py  test_canonicalization.py  test_comparator_selection.py  test_end_to_end_pack_verify.py  test_exit_codes.py  test_findings_writer.py  test_flatten_forms.py  test_history_selection.py  test_identity_fragility.py  test_m001_taxonomy_refresh.py  test_m002_extension_refactor.py  test_m003_anchoring_retrofit.py  test_m004_context_model_rewrite.py  test_m005_duplicate_cleanup.py  test_minimal_pack_verify.py  test_orchestrator_manifest.py  test_p001_duplicates.py  test_p002_anchoring.py  test_p004_type_unit.py  test_p005_taxonomy.py  test_p008_detector.py  test_p008_identity_registry.py  test_p008_pack_e2e.py  test_p008_scan.py  test_p009_corpus_contract.py  test_p009_detector.py  test_p009_identity_ledger.py  test_p009_observations.py  test_p009_pack_e2e.py  test_p009_scan.py  test_p009_spec.py  test_p009_workflow.py  test_registry_materialize.py  test_s3_source.py  test_sgml_extractor.py  test_verify_pack.py
(+74 files in other folders)
